@@ -37,5 +37,5 @@
     "webRequestBlocking",
     "*://*/*"
   ],
-  "version": "3.2.1.1"
+  "version": "3.2.1.2"
 }
