@@ -248,6 +248,7 @@
     "*://*.freiepresse.de/*",
     "*://*.fresnobee.com/*",
     "*://*.ft.com/*",
+    "*://*.ftm.eu/*",
     "*://*.ftm.nl/*",
     "*://*.gazzetta.it/*",
     "*://*.geelongadvertiser.com.au/*",
@@ -742,5 +743,5 @@
     "*://*.wyleex.com/*",
     "*://webcache.googleusercontent.com/*"
   ],
-  "version": "3.2.1.1"
+  "version": "3.2.1.2"
 }
